<resources>
    <string name="app_name">Proiect</string>
    <string name="action_settings">Settings</string>
    <string name="product_title">Add product</string>
    <string name="product_name">Name</string>
    <string name="product_category">Category</string>
    <string name="product_price">Price</string>
    <string name="add">Add</string>

    <string-array name="category">
        <item>Food</item>
        <item>Fashion</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_list_of_lists">ListOfLists</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_income">AddIncome</string>
</resources>
