<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_produs" tools:context=".Produs">

    <TextView android:text="@string/product_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textSize="30dp"/>

    <TableRow>
        <TextView android:text="@string/product_name"
            android:layout_width="match_parent"/>
        <EditText android:id="@+id/product_name"
            android:inputType="text"
            android:layout_width="fill_parent" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/product_category"/>
        <Spinner android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:entries="@array/category"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/product_price"/>
        <EditText android:inputType="number"
            android:id="@+id/price"
            android:layout_width="wrap_content"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button android:text="@string/add"
            android:onClick="Add"
            android:layout_column="0"
            android:id="@+id/add" />
    </TableRow>
</TableLayout>
